test/CheckError/Const/ModifyConstValuePointer.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

void f(const int* value) {
	// CHECK: .loci:7:2: error: template arguments do not satisfy require predicate 'const(int_t) : movable_t' of method 'assign'
	// CHECK: .loci:7:2: note: because: mutator method '__moveto' is required but type is const
	*value = 1;
}

// CHECK: 1 error generated.
